kubernetes/infrastructure/authentik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`authentik.mpdavis.com`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
  tls: {}
